# maira-interp

./: .env.example  .gitignore  CLAUDE.md  LICENSE.md  MAIRA2_Attention_Colab.ipynb  MAIRA2_Lightweight_Colab.ipynb  README.md  attention_visualizer.py  debug_model_loading.py  lightweight_visualizer.py  main.py  pyproject.toml  pytest.ini  run_tests_vscode.py
tests/: .gitignore  __init__.py  quick_test.py  run_tests.py  setup_auth.py  test_attention_visualizer.py  test_auth.py  test_environment.py
